clustering with swedish char